--- a/frontend/modules/_base/jade/layout.jade
+++ b/frontend/modules/_base/jade/layout.jade
@@ -1,8 +1,11 @@
+block config
+    include config.jade
+
 !doctype
 html
     head
         block head
-            include head.partials.jade
+            include partials/head.partial.jade
     
     body
         // HEADER
