--- a/frontend/modules/_base/jade/partials/head.partial.jade
+++ b/frontend/modules/_base/jade/partials/head.partial.jade
@@ -1,6 +1,7 @@
 meta(charset="utf-8")
 
-title Neoauto.com
+block title
+    title !{config.title}
 
 block links
     link(href="css/fonts.css" media="all" rel="stylesheet" type="text/css")
