--- a/frontend/modules/posting/controllers/persona-natural/views/_base/jade/layout--posting--paso1.jade
+++ b/frontend/modules/posting/controllers/persona-natural/views/_base/jade/layout--posting--paso1.jade
@@ -1,9 +1,4 @@
-extends ../../../../../_base/jade/layout--posting.jade
+extends ../../../../_base/jade/layout--posting.jade
 
-block content
-    .dropdown-cards
-        - cards = [{i:1}, {i:2}, {i:3}]
-        each(card in cards)
-            include ../../../../../_components-card/dropdown-card--persona-natural.component.jade
-                block title
-                    | card.i
+block head
+    include partials/head--posting--persona-natural.partial.jade
